Add Show recipe

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".ui.sign_in.SignUpActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".ui.products.CRUDActivity" />
+        <activity android:name=".ui.home.ShowRecipe" />
     </application>
 
 </manifest>
